--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,22 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+table {
+  width: 100%;
+}
+
+table, tr, td, th {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+td, th {
+  padding: 10px
 }
